# thorin2-experiment

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  CMakeLists.txt.gtest.in  CMakeLists.txt.half.in  CMakeLists.txt.in  README.md  WORKSPACE  half.bzl  half.hpp  islplay.cpp  main.cpp  matrixtest.cpp  nominaltest.cpp  qualifiertest.cpp
cmake/Modules/: FindISL.cmake
frontend/: .gitignore  README.md  arrays-test.lbl  arrays.lbl  ast.py  checker.py  constraint_checking.md  constraint_derivation.py  frontend.py  generate_cpp_code.py  isltest1.py  isltest2.py  isltest3.py  lambdaparser.py  lu-decomposition.lbl  parser.py  predefined_functions.py  test_ast.py  test_lambdaparser.py
frontend/programs/: arrays-simple.lbl  arrays.lbl  lu_decomposition-simple.lbl  lu_decomposition.lbl  matrixmultiplication.lbl  stdlib.lbl
frontend/tests/: isl_test_utils.py  test_ast_analysis.py  test_ast_constraintgen.py  test_ast_utils.py  test_checker.py  test_cppgen.py  test_frontend.py  test_lambdaparser.py  test_lambdaparser_ast.py
resources/: valgrind.supp
test/: BUILD  arity.cpp  bitset.cpp  cn.cpp  lambda.cpp  lexer.cpp  main.cpp  matrix.cpp  nominal.cpp  normalize.cpp  pack.cpp  parse.cpp  parser.cpp  primop.cpp  qualifier.cpp  sigma.cpp  singleton.cpp  ssa.cpp  substructural.cpp  subtypes.cpp  tests.bzl  util.h  variadic.cpp  variants.cpp
test/fe/: lexer.cpp  parser.cpp
test/llir/: primop.cpp
test/matchers/: literals.cpp  ops.cpp  types.cpp
test/me/: primop.cpp
thorin/: builder.h  check.cpp  check.h  cont.cpp  cont.h  def.cpp  def.cpp.orig  def.h  henk.cpp.h  henk.h  normalize.cpp  normalize.h  primop.h  print.cpp  print.h  print2.cpp  print2.h  qualifier.h  reduce.cpp  reduce.h  tables.h  traits.cpp  traits.h  type.h  visitor.h  world.cpp  world.h
thorin/analyses/: cfg.cpp  cfg.h  domtree.cpp  domtree.h  free_vars_params.h  looptree.cpp  looptree.h  schedule.cpp  schedule.h  scope.cpp  scope.h  verify.cpp
thorin/core/: fold.h  main.cpp  normalize.cpp  normalize.h  tables.h  world.cpp  world.h
thorin/core/transform/: ssa_builder.cpp  ssa_builder.h
thorin/fe/: lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
thorin/frontend/: lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
thorin/llir/: fold.h  normalize.cpp  normalize.h  tables.h  world.cpp  world.h
thorin/matchers/: literals.h  ops.h  types.h
thorin/me/: fold.h  normalize.cpp  normalize.h  tables.h  world.cpp  world.h
thorin/me/transform/: ssa_builder.cpp  ssa_builder.h
thorin/rules/: compiler.cpp  compiler.h  rule.cpp  rule.h
thorin/transform/: import.cpp  import.h  mangle.cpp  mangle.h  reduce.cpp  reduce.h
thorin/util/: array.h  bitset.cpp  bitset.h  cast.h  debug.cpp  debug.h  fold.h  hash.h  iterator.h  location.cpp  location.h  log.cpp  log.h  stream.cpp  stream.h  symbol.cpp  symbol.h  types.h  utility.h  ycomp.h
utils/: unicodemanager.cpp  unicodemanager.h
